[package]
name = "valley-free"
description = "BGP valley-free routing AS path exploration library"
keywords = ["bgp", "valley-free", "network", "simulation"]
repository = "https://github.com/bgpkit/valley-free"
documentation = "https://docs.rs/valley-free"
version = "0.3.0"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>", "Guilherme Salustiano <guissalustiano@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.4"
